# tgpost

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
tests/: test_cli.py  test_markdown.py
tgpost/: __init__.py  api.py  cli.py  config.py  markdown.py
