[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tgpost"
version = "0.2.0"
description = "Post Markdown files to a Telegram channel. No dependencies."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "VyroSMM" }]
keywords = ["telegram", "bot", "markdown", "cli", "publishing", "channel"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Communications :: Chat",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/vyrosmm/tgpost"
Issues = "https://github.com/vyrosmm/tgpost/issues"

[project.scripts]
tgpost = "tgpost.cli:main"

[tool.setuptools.packages.find]
include = ["tgpost*"]
